--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "shadcn": "^3.4.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
